--- a/css/style.css
+++ b/css/style.css
@@ -42,17 +42,24 @@ ul li a{
 	margin-top: 10%;
 }
 .second-section{
-	height: 800px;	
+	width: 100%;
+	height: 900px auto;
 }
 .third-section{
-	height: 500px;
+	width: 100%;
+	height: auto;
+	background-color: #A89F68;
+}
+.four-section{
+	width: 100%;
+	height: auto;
 	background-color: #A89F68;
 }
 #picture2{
 	border: 10px solid white;
 }
 #fondo-koala3{
-	height: 100vh;
+	height: 110vh;
 	background-image: url("../img/all.jpg");
 	background-repeat: no-repeat;
 	background-size: cover;
@@ -69,11 +76,13 @@ ul li a{
 	width: 100vh;
 }
 .five-section{
-	height: 300px;
+	width: 100%;
+	height: auto;
 }
 .six-section{
 	background-color: #A89F68;
-	height: 400px; 
+	width: 100%;
+	height: auto; 
 }
 #letters5{
 	color: white;
@@ -96,21 +105,29 @@ ul li a{
 }
 
 #row4{
-	margin-top: 8%;
+	margin-top: 5%;
+	margin-bottom: 5%;
 }
 
 #row5{
-	margin-top: 8%;
+	margin-top: 5%;
+	margin-bottom: 5%;
 }
 #row6{
 	margin-top: 5%;
 }
 #row7{
 	margin-top: 5%;
+	margin-bottom: 7%;
 }
 #row8{
 	margin-top: 8%;
 }
 #row9{
 	margin-top: 8%;
+	margin-bottom: 8%;
+}
+#row10{
+	padding-top: 4%;
+	padding-bottom: 4%;
 }
