--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,17 @@
 wood brown: A89F68;
 army green: 41521F;
 */
+/* Área del navbar */
+/* Elimina los margenes */
 .row{
 	margin: 0px;
 }
+/* Le otorgo el color que deseo al nav bar*/
 .navbar-inverse{
 	background-color: transparent;
 	border-color: transparent;
 }
+/* Primera portada bajo el navbar*/
 .back-portada-koala{
 	height: 100vh;
 	width: auto;
@@ -18,45 +22,76 @@ army green: 41521F;
 	position: relative;
 
 }
-#boton1{
-	background-color: #A89F68
+/* le otorgo al boton caracteristicas en el del navbar*/
+.btn-success{
+	background-color: #41521F;
+	border: none;
 }
+/* Otorgo color y margen al row */
+#row3{
+	margin-top: 25%;
+	color: white;
+}
+/* Otorgo margen y tamaño a la tipografia (Save the Koala) */
 #save-koala{
 	margin-left: 5%;
 	font-size: 15px;
+	color: white;
 }
+/* Otorgo margen y tamaño a botones del nav */
 #save-koa{
 	margin-right: 5%;
 	font-size: 15px;
-}
-ul li a{
 	color: white;
 }
-#letters0{
+/* le otorgo color a la tipografia */
+#letters0 #letters1{
 	color: white;
 }
-#letters1{
-	color: white;
-}
-.parrafo{
-	margin-top: 10%;
-}
+
+
+/* segunda section */
+/* Otorgo alto y ancho a la imagen */
 .second-section{
 	width: 100%;
 	height: 900px auto;
 }
+#row4{
+	margin-top: 5%;
+	margin-bottom: 5%;
+}
+
+
+/* tercera section */
+/* Otorgo alto y ancho a la imagen */
 .third-section{
 	width: 100%;
 	height: auto;
 	background-color: #A89F68;
+
 }
+#row5{
+	margin-top: 5%;
+	margin-bottom: 5%;
+}
+#picture2{
+	border: 10px solid white;
+}
+#letters3{
+	color: white;
+}
+
+
+/* cuarta section */
+/* Otorgo alto y ancho a la imagen */
 .four-section{
 	width: 100%;
 	height: auto;
 	background-color: #A89F68;
 }
-#picture2{
-	border: 10px solid white;
+.four-section .row{
+	margin-left: 0px;
+	width: 100vh;
 }
 #fondo-koala3{
 	height: 110vh;
@@ -65,20 +100,45 @@ ul li a{
 	background-size: cover;
 	position: relative;
 }
-#letters3{
+#row6{
+	margin-top: 5%;
+}
+
+
+/* quinta section */
+.five-section{
+	width: 100%;
+	height: auto;
+}
+#row-title{
+	padding-bottom: 3%;
+	color: 	color: #A89F68;
+}
+.parrafo{
+	margin-top: 10%;
 	color: white;
 }
 #letters4{
 	color: #41521F;
 }
-.four-section .row{
-	margin-left: 0px;
-	width: 100vh;
+#size{
+	display: flex;
+	justify-content: center;
+	font-size: 3.5em;
+	color: #A89F68;
+	padding-bottom: 3%;
 }
-.five-section{
-	width: 100%;
-	height: auto;
+.glyphicon{
+	display: flex;
+	font-size: 300%;
+	justify-content: center;
+	color: #A89F68;
+	padding-bottom: 5%;
 }
+
+
+
+/* six section */
 .six-section{
 	background-color: #A89F68;
 	width: 100%;
@@ -91,6 +151,21 @@ ul li a{
 	background-color: #41521F;
 	height: 300px; 
 }
+#row10{
+	padding-top: 4%;
+	padding-bottom: 4%;
+}
+#row7{
+	margin-top: 5%;
+	margin-bottom: 7%;
+}
+.numeros h1{
+	display: inline-block;
+	font-size: 500%;
+}
+
+
+/* seven section */
 .seven-section #letters6{
 	color: #A89F68;
 }
@@ -100,34 +175,17 @@ ul li a{
 #row2{
 	margin-top: 15%;
 }
-#row3{
-	margin-top: 25%;
-}
-
-#row4{
-	margin-top: 5%;
-	margin-bottom: 5%;
-}
-
-#row5{
-	margin-top: 5%;
-	margin-bottom: 5%;
-}
-#row6{
-	margin-top: 5%;
-}
-#row7{
-	margin-top: 5%;
-	margin-bottom: 7%;
-}
-#row8{
-	margin-top: 8%;
-}
 #row9{
 	margin-top: 8%;
 	margin-bottom: 8%;
 }
-#row10{
-	padding-top: 4%;
-	padding-bottom: 4%;
+
+
+
+
+
+
+#row8{
+	margin-top: 8%;
 }
+
